# qr-scanner

./: README.md  com.github.sirthomas.qr-scanner.yml  meson.build
.github/workflows/: main.yml
data/: gschema.xml  meson.build  qr-scanner.appdata.xml.in  qr-scanner.desktop.in
meson/: post_install.py
po/: POTFILES  bn.po  com.github.sirthomas.qr-scanner.pot
src/: Application.vala  QrGrid.vala  Window.vala  meson.build
src/Widgets/: Box.vala  HeaderBar.vala  QrGrid.vala  Window.vala
